--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
         </div>
 
-        <h1 class="content-title">Registro de Usuarios____</h1>
+        <h1 class="content-title">Registro de Usuarios</h1>
         <div>
             <label for="miID" class="form-label">ID:</label>
             <input type="text" id="miID" class="form-input">
