--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Registro de Usuarios!!</title>
 
 <script src="app.js"></script>
+<script src="app - copia.js"></script>
 <link rel="stylesheet" type="text/css" href="stylee.css">
 
     <script>
