--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         const username = document.getElementById("username").value;
         const password = document.getElementById("password").value;
 
-        if (username === "RRHH" && password === "contraseña") {
+        if (username === "RRHH" && password === "aa476708") {
             document.querySelector(".content").style.display = "block";
             document.querySelector(".login-form").style.display = "none";
         } else {
