--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuarios!!</title>
+    <p>Este es un cambio</p>
 
 <script src="app.js"></script>
 <script src="app - copia.js"></script>
